# psp2renga

./: LICENSE.txt  README.md
Include/: nmfmanager.h  nmprunner.h  renga-defs.h  renga-funcs.h  renga_user-funcs.h  types.h
Kernel/: CMakeLists.txt  logging.h  main.c  psp2renga.yml  user.h
Misc/NMFManager/Payloads/acmdh_hook/: Makefile  main.c
Misc/NMFManager/Payloads/cp_payload/: main.c
Misc/NMFManager/Payloads/framework/: main.c
Misc/NMFManager/Payloads/irq_mgr/: Makefile  main.c
Misc/NMFManager/Payloads/manager/: Makefile  main.c
Misc/NMFManager/Payloads/swap_bank/: Makefile  main.c
Misc/NMPRunner/Payloads/stage2_60/: Makefile  main.c
Misc/NMPRunner/Payloads/stage2_71/: Makefile  main.c
Misc/NMPRunner/Samples/IncludeMemcpySample/: CMakeLists.txt  logging.h  main.c  memcpy_sample.yml
Misc/NMPRunner/Samples/IncludeSecureDumpSample/: CMakeLists.txt  logging.h  main.c  secure_dump_sample.yml
Misc/NMPRunner/Samples/PayloadBigmacSample/: Makefile  main.c
Misc/Renga/Payloads/mepcpy/: Makefile  main.c
Misc/Renga/Samples/PayloadGetCurrentCfgPaddr/: Makefile  main.c
Misc/Renga/Samples/UserDecryptedSmLoad-dsll_mdr72/: CMakeLists.txt  main.c
User/: CMakeLists.txt  main.c
User/app/: CMakeLists.txt  lv0_loader.vpk  main.c
User/plugin/_forcephy/: CMakeLists.txt  rengaUserFphy.c  rengaUserFphy.yml
User/plugin/_forcesram/: CMakeLists.txt  rengaUserFsram.c  rengaUserFsram.yml
User/plugin/_settings/: CMakeLists.txt  console_info.xml  rengaUser.c  rengaUser.yml
decsecldr/lite-72mdr/: CMakeLists.txt  README.md  dsll-mdr72.vpk
decsecldr/lite-72mdr/app/: main.c
decsecldr/lite-72mdr/plugin/: dsll.c  dsll.h  dsll.yml
